# openai-inventory-agent

./: README.md
inventory-agents/: .env  README.md  inventory.json  pyproject.toml
inventory-agents/src/inventory_agents/: __init__.py  inventory.json  main.py  model.py
